<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="pt.park_at_home.parkathome.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="pt.park_at_home.parkathome.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="pt.park_at_home.parkathome.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />
    <header
            android:fragment="pt.park_at_home.parkathome.SettingsActivity$SettingsLoginFragment"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/pref_settings_login"/>

</preference-headers>
